syntax = "proto3";
package lavanet.lava.plans;

option go_package = "github.com/lavanet/lava/v4/x/plans/types";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";

import "lavanet/lava/plans/plan.proto";

message PlansAddProposal {
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1 [(gogoproto.jsontag) = "title"]; 
  string description = 2 [(gogoproto.jsontag) = "description"]; 
  repeated Plan plans = 3 [(gogoproto.nullable) = false, (gogoproto.jsontag) = "plans"]; 
  bool modify = 4 [(gogoproto.jsontag) = "modify"]; 
}

message PlansDelProposal {
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  string title = 1 [(gogoproto.jsontag) = "title"];
  string description = 2 [(gogoproto.jsontag) = "description"];
  repeated string plans = 3 [(gogoproto.jsontag) = "plans"];
}
