syntax = "proto3";
package lavanet.lava.subscription;

// this line is used by starport scaffolding # proto/tx/import
import "amino/amino.proto";
import "lavanet/lava/projects/project.proto";
import "gogoproto/gogo.proto";  
option go_package = "github.com/lavanet/lava/v4/x/subscription/types";

// Msg defines the Msg service.
service Msg {
  rpc Buy(MsgBuy) returns (MsgBuyResponse);
  rpc AddProject(MsgAddProject) returns (MsgAddProjectResponse);
  rpc DelProject(MsgDelProject) returns (MsgDelProjectResponse);
  rpc AutoRenewal(MsgAutoRenewal) returns (MsgAutoRenewalResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgBuy {
  option (amino.name) = "subscription/Buy";
  reserved 5;
  string creator = 1;
  string consumer = 2;
  string index = 3;
  uint64 duration = 4; // in months
  bool auto_renewal = 6;
  bool advance_purchase = 7;
}

message MsgBuyResponse {
}

message MsgAddProject {
  option (amino.name) = "subscription/AddProject";
  string creator = 1;
  lavanet.lava.projects.ProjectData project_data = 2 [(gogoproto.nullable) = false];
}

message MsgAddProjectResponse {
}

message MsgDelProject {
  option (amino.name) = "subscription/DelProject";
  string creator = 1;
  string name = 2;
}

message MsgDelProjectResponse {
}

message MsgAutoRenewal {
  option (amino.name) = "subscription/AutoRenewal";
  string creator = 1;
  bool enable = 2;
  string consumer = 3;
  string index = 4;
}

message MsgAutoRenewalResponse {
}

// this line is used by starport scaffolding # proto/tx/message
